@@ -3,6 +3,8 @@ package com.alexxiconify.rustmc.mixin;
 import com.alexxiconify.rustmc.ModBridge;
 import com.alexxiconify.rustmc.NativeBridge;
 import com.alexxiconify.rustmc.RustMC;
+import com.alexxiconify.rustmc.util.PieChartRenderer;
+import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.gui.DrawContext;
 import net.minecraft.client.gui.hud.DebugHud;
 import org.spongepowered.asm.mixin.Mixin;
@@ -24,12 +26,30 @@ public class DebugHudMixin {
 
     @Inject(method = "render", at = @At("TAIL"), require = 0)
     private void onRenderTail(DrawContext context, CallbackInfo ci) {
-        if (!RustMC.CONFIG.isEnableDebugHudGraph() || !RustMC.CONFIG.isUseNativeF3() || ModBridge.isHudOwned()) return;
         if (!NativeBridge.isReady()) return;
+        // Early exit if neither overlay is enabled — avoids any JNI/rendering overhead
+        if (!RustMC.CONFIG.isEnableDebugHudGraph() && !RustMC.CONFIG.isEnablePieChart()) return;
 
+        // ── Sparkline graph (F8 toggle) ──
+        if (RustMC.CONFIG.isEnableDebugHudGraph() && RustMC.CONFIG.isUseNativeF3() && !ModBridge.isHudOwned()) {
+            drawSparkline(context);
+        }
+
+        // ── Pie chart (F7 toggle) ──
+        if (RustMC.CONFIG.isEnablePieChart()) {
+            MinecraftClient mc = MinecraftClient.getInstance();
+            if (mc.textRenderer != null) {
+                int screenW = context.getScaledWindowWidth();
+                PieChartRenderer.draw(context, mc.textRenderer, screenW);
+            }
+        }
+    }
+
+    private static void drawSparkline(DrawContext context) {
         float[] history = NativeBridge.invokeGetFrameHistory();
         if (history == null || history.length == 0) return;
 
+        MinecraftClient mc = MinecraftClient.getInstance();
         int graphW = Math.min(history.length, 240);
         int graphH = 40;
         int x0 = 2;
@@ -46,9 +66,16 @@ public class DebugHudMixin {
         int target30Y = y0 + graphH - (int)(33.33f / 50.0f * graphH);
         context.fill(x0, target30Y, x0 + graphW, target30Y + 1, 0x40FFFF00);
 
+        // Compute stats while drawing bars
+        float total = 0;
+        float min = Float.MAX_VALUE;
+        float max = 0;
         for (int i = 0; i < graphW; i++) {
             float ms = history[i];
-            int barH = Math.min(graphH, Math.max(1, (int)(ms / 50.0f * graphH)));
+            total += ms;
+            if (ms < min) min = ms;
+            if (ms > max) max = ms;
+            int barH = Math.clamp((int)(ms / 50.0f * graphH), 1, graphH);
             int barY = y0 + graphH - barH;
             int color;
             if (ms < 16.67f) {
@@ -59,6 +86,29 @@ public class DebugHudMixin {
                 color = 0xFFCC2222; // Red — below 30 FPS
             }
             context.fill(x0 + i, barY, x0 + i + 1, y0 + graphH, color);
+        }
+
+        // ── Legend (right side of graph) ──
+        if (mc.textRenderer != null) {
+            // Target line labels
+            context.drawTextWithShadow(mc.textRenderer, "60", x0 + graphW + 2, targetY - 4, 0xFF00CC44);
+            context.drawTextWithShadow(mc.textRenderer, "30", x0 + graphW + 2, target30Y - 4, 0xFFCCAA00);
+
+            // Stats below graph
+            float avg = total / graphW;
+            int statsY = y0 + graphH + 3;
+            context.drawTextWithShadow(mc.textRenderer,
+                    "%.1fms avg | %.1f min | %.1f max".formatted(avg, min, max),
+                    x0, statsY, 0xFFAAAAAA);
+
+            // Color legend
+            int legendY = statsY + 11;
+            context.fill(x0, legendY + 1, x0 + 6, legendY + 7, 0xFF00CC44);
+            context.drawTextWithShadow(mc.textRenderer, ">60", x0 + 8, legendY, 0xFF00CC44);
+            context.fill(x0 + 38, legendY + 1, x0 + 44, legendY + 7, 0xFFCCAA00);
+            context.drawTextWithShadow(mc.textRenderer, "30-60", x0 + 46, legendY, 0xFFCCAA00);
+            context.fill(x0 + 88, legendY + 1, x0 + 94, legendY + 7, 0xFFCC2222);
+            context.drawTextWithShadow(mc.textRenderer, "<30", x0 + 96, legendY, 0xFFCC2222);
         }
     }
 }
